# fullstack-ecosystem

./: .dockerignore  .editorconfig  .env.example  .env.sample  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .spectral.yaml  .trivyignore  CHANGELOG.md  COMMAND_BRIDGE.md  CONSOLE_SSH_QUICKSTART.md  CONTRIBUTING.md  COOLIFY_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.orchestrator  Dockerfile.smoke  GOOGLE_OAUTH_SETUP.md  GOVERNANCE_PACK.md  GROWTH_STRATEGY.md  INCIDENT_REPORT_2025_12_12.md  JWT_AUTH_QUICKSTART.md  LICENSE  LINTING_SETUP_COMPLETE.md  LOCAL_SCANNING_README.md  METRICS.md  MILESTONE_COMPLETION_SUMMARY.md  Makefile  ONBOARDING_STRATEGY.md  OPERATIONS.md  PACKAGING_README.md  RBAC_DOCUMENTATION.md  README-TOOLS.md  README.md  README_ADV_BACKEND.md  README_ADV_BACKEND_UPDATES.md  README_DOCKER.md  REPORT-SOAK-TEMPLATE.md  (+117 more)
.github/: dependabot.yml  security-manifest.schema.json
ai-agent/: .env  LAUNCH_PLAN.md  MARKETING_STRATEGY.md  README.md  agent_config.yaml  agent_deployment.yml  benchmark_gemini.py  check_models.py  check_task_status.ps1  chief_orchestrator.py  chief_state.json  debug_auth.py  evaluate_agent.py  infrastructure_agent.py  launch_office.py  marketing_agent.py  mcp_server.py  monitoring_agent.py  nightly_eval_wrapper.ps1  quick_eval.ps1  requirements.txt  run.ps1  run_eval_helper.ps1  schedule_nightly_eval.ps1  start_agents_safe.ps1  test_agent.py  watchdog.ps1
aiauto_venv/: pyvenv.cfg
artifacts/: README.md
auth-service/: Dockerfile  requirements.txt
autogen/: advanced_backend.py  input_validation.py  roles_permissions.py
backend/: Dockerfile  requirements.txt
certs/: README.md
ci/: probe_endpoints.py  scan_nginx_config.py
config/: agent.config.yaml  agents.yaml  production.yaml
data/: achievements.json  platform.db
data-processor-cli/: pyproject.toml  requirements-dev.txt
data-processor-cli/data_processor_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
data-processor-cli/src/: logger.py  main.py  processor.py  validator.py
data-processor-cli/tests/: test_processor.py
deployments/: state_og-audio.com.json
docker/: alertmanager.yml  docker-compose.yml  msteams-config.yml  nginx.conf  pip.conf  prometheus.yml  prometheus_rules.test.yml  prometheus_rules.yml
docs/: ADDING_PROJECTS.md  ARCHITECTURE.md  alerts_annotations.jsonl  alerts_taxonomy.generated.md  alerts_taxonomy.html  benchmarking.md  container_hardening.md  governance_webhook.schema.json  grafana_taxonomy_dashboard_example.json  image_signing_provenance.md  resilience_framework.md  runbook_sources.yml  supply_chain_integrity.md  test_plan_coverage_next_batch.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
full-scan-test/: combined-policy-summary.json  scan-summary.md
governance-app/: README.md  app.py  config.py  github_client.py  manifest.yml  persistence.py  requirements.txt  sample_push_event.py
governance_app/: Dockerfile  README.md  app.py  app_backup.py  config.py  github_client.py  persistence.py  requirements.txt  sample_push_event.py
hostamar-azure-agent/: Program.cs  hostamar-azure-agent.csproj
hostamar-platform/: .gitignore  Dockerfile  FOUNDRY_DEPLOY_STEPS.md  INSTALL_NOW.md  QUICK_START.md  README.md  RESEARCH_PLAN_AZURE_FOUNDRY.md  SETUP_INSTRUCTIONS.md  install.bat  jest.config.js  lighthouserc.js  next.config.js  package-lock.json  package.json  setup.bat  setup.ps1  tsconfig.json
hybrid-cloud-setup/: BUSINESS_LAUNCH_PLAN.md  README.md  initialize_hostamar_node.sh  terraform.tfvars  update-gcp-vpn.ps1  update-gcp-wireguard.sh
infrastructure/: alert_rules.yml  docker-compose.yaml  health_check.sh  nginx_template.conf  prometheus.yml
metrics-history/: metrics-2025-09-29.json
models/: anomaly_detector.pkl  code_quality_model.pkl  code_quality_scaler.pkl  vulnerability_detector.pkl  vulnerability_vectorizer.pkl
nautilus_autogen_trader/: docker-compose.yml  run_continuous.py
perf/: locustfile.py
scan-results/: combined-policy-summary.json  scan-summary.md
schemas/: alerts_report.schema.json  config.schema.json  document_indexing.schema.json  layout_report.schema.json  stability-metrics.schema.json  validations_index.schema.json
scripts/: README-CODE-QUALITY.md  aggregate_quantile_benchmarks.py  artifact_manager.py  audit_guard.sh  bench_quantum.ps1  benchmark_metrics_quantiles.py  benchmark_search.py  breaking_patterns.json  check_readiness.ps1  classify_operation_changes.py  compare_grafana_layout.py  create_demo_sdk_package.py  create_demo_sdk_package_fixed.py  create_simple_demo.py  deep_sbom_integration.py  deploy-all-from-vm.sh  deploy_wizard.py  deployment_orchestrator.py  diagnose-ssh.sh  diff_openapi_schema.py  enforce_runbook_threshold.py  enhanced-sbom-generation.sh  export_openapi_schema.py  format.ps1  format.py  foundrypublishapi.py  generate_agents.py  generate_alerts_changelog.py  generate_checksums.py  generate_governance_stats_badge.py  generate_milestone_badge.py  generate_runbook_tldr.py  generate_signing_keypair.py  generate_stability_metrics.py  generate_taxonomy_metrics.py  governance_edge_case_handler.py  init-letsencrypt.sh  inject_streak_and_badge.py  inventory.ini  license_cve_scan.ps1  (+72 more)
security/: check_ai_alignment.py  compare_vuln_baseline.py  dependency_provenance_graph.py  enrich_trivy_sarif.py  generate_constraints.py  generate_provenance.py  license_scan.py  sarif_severity_extract.py  sbom_diff.py  security_settings.json  validate_workflow_yaml.py  verify_provenance.py  vuln_baseline.json
security-reports/: combined-policy-summary.json  scan-summary.md
src/: config_agent.py
status/: roadmap-interest.jsonl
test-scan/: combined-policy-summary.json  scan-summary.md
tests/: conftest.py  test_adaptive_persistence.py  test_adaptive_reset_and_aggregates.py  test_adaptive_tdigest.py  test_agent_registry_schema.py  test_agents_endpoints.py  test_anomaly_deterministic.py  test_anomaly_flag.py  test_auth_flow.py  test_auth_metrics_security.py  test_backend_failures.py  test_checksums_signature.py  test_metrics.py  (+46 more)
(+424 files in other folders)
