[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-processor-cli"
version = "1.0.0"
description = "High-performance file processing CLI tool"
authors = [
  { name="Hostamar Engineering", email="engineering@hostamar.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
data-processor = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
